--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="page">
   <div class="header">
     Main Angular
-    <button class="save-button" (click)="saveChangesAsPDF()">Save</button>
+    <!-- <button class="save-button" (click)="saveChangesAsPDF()">Save</button> -->
     <button class="AddVersion-button" (click)="addVersion()">Add Version</button>
+    <!-- <button class="DoctoPDF-button" (click)="convertDocxToPdf()">Add Version</button> -->
   </div>
   <div #viewer class="viewer"></div>
 </div>
